sg.tf
resource "aws_security_group" "alb_sg" {
  name = "${var.env}-alb-sg"
  description = "Allow inbound traffic and all outbound traffic"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"            # -1 means all traffic
   cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.env}-alb-sg"
    Environment = var.env
  }
}

resource "aws_security_group" "ecs_sg" {
  name = "${var.env}-ecs-sg"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 5000
    to_port = 5000
    protocol = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.env}-ecs-sg"
    Environment = var.env
  }
}
